--- a/todo.html
+++ b/todo.html
@@ -12,6 +12,7 @@
   <script defer src="js/userName.js"></script>
   <script defer src="js/addToDo.js"></script>
   <script defer src="js/bg.js"></script>
+  <script defer src="js/placeholder.js"></script>
   <!-- <script defer src="js/weather.js"></script> -->
 </head>
 <body>
